--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app
-        PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app>
-
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
     <servlet>
         <servlet-name>profilesServiceServlet</servlet-name>
         <servlet-class>com.lingoking.server.ProfilesServiceImpl</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>profilesServiceServlet</servlet-name>
         <url-pattern>/lingoking/profilesService</url-pattern>
     </servlet-mapping>
 
-    <!-- Default page to serve -->
-    <welcome-file-list>
+    <servlet>
+        <servlet-name>UploadServlet</servlet-name>
+        <servlet-class>com.lingoking.server.UploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UploadServlet</servlet-name>
+        <url-pattern>/UploadServlet</url-pattern>
+    </servlet-mapping>
+    <context-param>
+        <description>Location to store uploaded file</description>
+        <param-name>file-upload</param-name>
+        <param-value>images/</param-value>
+    </context-param>
+   <welcome-file-list>
         <welcome-file>lingoking.html</welcome-file>
     </welcome-file-list>
 
