Image upload work in progress, dealing with passing filename to upload servlet

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     <context-param>
         <description>Location to store uploaded file</description>
         <param-name>file-upload</param-name>
-        <param-value>images/</param-value>
+        <param-value>/images/</param-value>
     </context-param>
    <welcome-file-list>
         <welcome-file>lingoking.html</welcome-file>
