--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,6 +4,7 @@ dbPassword=root
 dbIp=127.0.0.1
 dbName=profileDb
 tableName=profiles
+numberOfProfilesPerPage=4
 
 #File Upload
 maxFileSize=1024000000
